k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ithaka-frontend-service
spec:
  type: ClusterIP
  selector:
    app: ithaka-frontend
  ports:
    - port: 80
      targetPort: 3000
